# youtube-telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  keyboards.py  middlewares.py  pyproject.toml  requirements.txt  states.py
handlers/: __init__.py  channels.py  chats.py  common.py  info.py
services/: notifier.py  storage.py  youtube.py
tests/: conftest.py  test_keyboards.py  test_storage.py  test_youtube_resolver.py
