[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-telegram-bot"
version = "0.1.0"
description = "Бот для уведомлений о новых видео YouTube в Telegram (aiogram 3)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.4,<4",
    "google-api-python-client>=2.100,<3",
    "python-dotenv>=1.0,<2",
    "aiohttp>=3.9,<4",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools]
py-modules = ["bot", "config", "keyboards", "middlewares", "states"]

[tool.setuptools.packages.find]
where = ["."]
include = ["handlers*", "services*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
